<resources>
    <string name="app_name">Mung Exambro</string>
    <string name="str_URLTextInput">Masukkan Alamat Server</string>
    <string name="str_next">Lanjutkan</string>
    <string name="str_scan_qr_mainmenu">Scan QR Code Alamat Server</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="str_exit">Keluar</string>
    <string name="str_makesure_exit">Yakin keluar dari aplikasi?</string>
    <string name="str_about">Tentang</string>
    <string name="str_refresh">Refresh</string>
    <string name="str_scannig_qrcode">Memindai kode qr</string>
    <string name="str_print">Print</string>
    <string name="str_back">Back</string>
    <string name="str_forward">Forward</string>
    <string name="str_downloading">Downloading. . .</string>
    <string name="str_check">Check</string>
    <string name="str_checking">Checking. . .</string>
    <string name="str_update">Update</string>
    <string name="str_updateavailable">Update available!</string>
    <string name="str_noupdateavailable">No Update available. . .</string>
    <string name="str_changelog">Change Log: \n</string>
    <string name="str_install">Install</string>
    <string name="str_plsallowpermissionrequest">BAKA!</string>
    <string name="str_understand">WAKARIMASHITA</string>
    <string name="str_settings">Settings</string>
    <string name="str_ChatGPT">ChatGPT</string>
    <string name="str_token">Token</string>
    <string name="str_enteryourtoken">Enter your Token</string>
    <string name="str_set">Set</string>
    <string name="str_model">Model</string>
    <string name="str_temperature">Temperature</string>
    <string name="str_maxtoken">Max Token</string>
    <string name="title_activity_chat_gptactivity">ChatGPTActivity</string>
    <string-array name="TestSpinner">
        <item>ada</item>
    </string-array>
</resources>