<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.chatgpt_settings.ChatGPTSettingsFragment">
    
    <androidx.cardview.widget.CardView
        android:id="@+id/Card_Token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/str_token"
                android:textStyle="bold"
                android:textSize="25dp"/>
            <com.google.android.material.textfield.TextInputLayout
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:boxBackgroundMode="outline"
                app:boxBackgroundColor="@android:color/transparent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/InputToken"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/str_enteryourtoken"
                    android:inputType="textShortMessage"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/Btn_SetToken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/str_set" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Card_Token">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/str_model"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <Spinner
                android:id="@+id/selector_Model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/TestSpinner"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/str_temperature"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <com.google.android.material.slider.Slider
                android:id="@+id/slider_Temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/str_maxtoken"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <com.google.android.material.slider.Slider
                android:id="@+id/slider_MaxToken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueTo="4000"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>